--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -18,5 +18,6 @@ body {
     display: flex;
     flex-direction: column;
     background-color: var(--background);
+    font-family: 'DM Sans', sans-serif;
 }
 
