--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -21,6 +21,10 @@ body {
     font-family: 'DM Sans', sans-serif;
 }
 
+main {
+    flex: 1 0 auto;
+}
+
 .navbar {
     background-color: var(--primary);
     transition: all 0.3s ease;
